// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionButton does not render icon if not provided 1`] = `
<body>
  <div>
    <div
      class="stActionButton"
      data-testid="stActionButton"
    >
      <button
        class="css-1oo5315-StyledBaseButton-StyledHeaderButton ef3psqc4"
        data-testid="baseButton-header"
        kind="header"
      >
        <div
          class="css-dk10a1-StyledActionButtonContainer e3g6aar1"
        >
          <span
            data-testid="stActionButtonLabel"
          >
            the label
          </span>
        </div>
      </button>
    </div>
  </div>
</body>
`;

exports[`ActionButton does not render label if not provided 1`] = `
<body>
  <div>
    <div
      class="stActionButton"
      data-testid="stActionButton"
    >
      <button
        class="css-1oo5315-StyledBaseButton-StyledHeaderButton ef3psqc4"
        data-testid="baseButton-header"
        kind="header"
      >
        <div
          class="css-dk10a1-StyledActionButtonContainer e3g6aar1"
        >
          <div
            class="css-lb87cf-StyledActionButtonIcon e3g6aar0"
            data-testid="stActionButtonIcon"
          />
        </div>
      </button>
    </div>
  </div>
</body>
`;

exports[`ActionButton renders without crashing and matches snapshot 1`] = `
<body>
  <div>
    <div
      class="stActionButton"
      data-testid="stActionButton"
    >
      <button
        class="css-1oo5315-StyledBaseButton-StyledHeaderButton ef3psqc4"
        data-testid="baseButton-header"
        kind="header"
      >
        <div
          class="css-dk10a1-StyledActionButtonContainer e3g6aar1"
        >
          <div
            class="css-lb87cf-StyledActionButtonIcon e3g6aar0"
            data-testid="stActionButtonIcon"
          />
          <span
            data-testid="stActionButtonLabel"
          >
            the label
          </span>
        </div>
      </button>
    </div>
  </div>
</body>
`;

exports[`ToolbarActions renders without crashing 1`] = `
<body>
  <div>
    <div
      data-testid="stToolbarActions"
    >
      <div
        class="stActionButton"
        data-testid="stActionButton"
      >
        <button
          class="css-1oo5315-StyledBaseButton-StyledHeaderButton ef3psqc4"
          data-testid="baseButton-header"
          kind="header"
        >
          <div
            class="css-dk10a1-StyledActionButtonContainer e3g6aar1"
          >
            <div
              class="css-lb87cf-StyledActionButtonIcon e3g6aar0"
              data-testid="stActionButtonIcon"
            />
          </div>
        </button>
      </div>
      <div
        class="stActionButton"
        data-testid="stActionButton"
      >
        <button
          class="css-1oo5315-StyledBaseButton-StyledHeaderButton ef3psqc4"
          data-testid="baseButton-header"
          kind="header"
        >
          <div
            class="css-dk10a1-StyledActionButtonContainer e3g6aar1"
          >
            <span
              data-testid="stActionButtonLabel"
            >
              Share
            </span>
          </div>
        </button>
      </div>
    </div>
  </div>
</body>
`;
